crates/nyx-lexer/tests/snapshots/integration_tests__unions__generic_pair.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Union
- Ident: Either
- LBracket
- Ident: L
- Comma
- Ident: R
- RBracket
- Newline
- Indent
- Ident: left
- Colon
- Ident: L
- Newline
- Ident: right
- Colon
- Ident: R
- Newline
- Dedent
- Union
- Ident: Result
- LBracket
- Ident: T
- Comma
- Ident: E
- RBracket
- Newline
- Indent
- OkLiteral
- Colon
- Ident: T
- Newline
- Ident: err
- Colon
- Ident: E
- Newline
- Dedent
