crates/nyx-lexer/tests/snapshots/integration_tests__unions__generic_single.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Union
- Ident: Option
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: some
- Colon
- Ident: T
- Newline
- Ident: none
- Colon
- OkLiteral
- Newline
- Dedent
