crates/nyx-lexer/tests/snapshots/integration_tests__unions__namespaced.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Union
- Core
- Colon
- Colon
- Ident: error
- Colon
- Colon
- Ident: IoResult
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- OkLiteral
- Colon
- Ident: T
- Newline
- Ident: err
- Colon
- Ident: IoError
- Newline
- Dedent
- Union
- Ident: math
- Colon
- Colon
- Ident: Number
- Newline
- Indent
- Ident: integer
- Colon
- I64
- Newline
- Ident: rational
- Colon
- F64
- Newline
- Dedent
