crates/nyx-lexer/tests/snapshots/integration_tests__unions__with_where.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Union
- Ident: Comparable
- LBracket
- Ident: A
- Comma
- Ident: B
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: A
- Colon
- Ident: Ord
- Newline
- Ident: B
- Colon
- Ident: Ord
- Newline
- Dedent
- Ident: first
- Colon
- Ident: A
- Newline
- Ident: second
- Colon
- Ident: B
- Newline
- Dedent
